# octoplat

./: .gitignore  CLAUDE.md  CONTENT_ROADMAP.md  Cargo.toml  LICENSE  README.md  WEB_DEPLOYMENT_GUIDE.md  flux-guide.md
crates/octoplat-game/: Cargo.toml  build.rs
crates/octoplat-game/src/: app_state.rs  assets.rs  camera.rs  collectibles.rs  collision.rs  config.rs  error.rs  game_state.rs  gamepad.rs  input.rs  lib.rs  paths.rs
crates/octoplat-game/src/app/: actions.rs  keybinds.rs  mod.rs
crates/octoplat-game/src/audio/: ambient.rs  mod.rs  music.rs
crates/octoplat-game/src/effects/: controller.rs  mod.rs  particles.rs  speed_lines.rs
crates/octoplat-game/src/gameplay/: collision.rs  engine.rs  feedback.rs  mod.rs  physics.rs
crates/octoplat-game/src/hazards/: enemy.rs  mod.rs
crates/octoplat-game/src/level/: environment.rs  manager.rs  mod.rs  visuals.rs
crates/octoplat-game/src/player/: abilities.rs  collision.rs  mod.rs  movement.rs  state.rs  state_machine.rs  (+1 more)
crates/octoplat-game/tests/: collision.rs  config.rs  effects.rs  game_loop.rs  input.rs  level_loading.rs  platforms.rs  player.rs  procgen.rs  scenarios.rs
flux-enhancement/: QUICK_START.md  README.md  batch_assets_example.json  batch_decorations.py  batch_tiles.py  batch_ui_gen.py  decoration_variants_batch.json  decorations_batch.json  game_asset_pipeline_design.md  octopus_hero_spec.json  pyproject.toml  simple_asset_gen.py  ui_additional_batch.json  ui_hazards_batch.json  ui_hud_batch.json  ui_hud_regen_batch.json  ui_menus_batch.json  ui_minimap_biome_batch.json  ui_screens_batch.json
(+159 files in other folders)
