[workspace]
resolver = "2"
members = ["crates/octoplat-core", "crates/octoplat-game"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
