[project]
name = "flux-tools"
version = "0.1.0"
description = "FLUX Schnell asset generation tools for Octoplat"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numba>=0.58",
    "numpy<2",
    "onnxruntime<1.17",
    "pillow>=10.0.0",
    "rembg>=2.0.50",
]

[tool.uv]
dev-dependencies = []
